# hedonism-wines-assistant

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
data/: golden_set.jsonl
scripts/: deploy.sh
src/hedonism_assistant/: __init__.py  config.py  logging_config.py
src/hedonism_assistant/api/: __init__.py  app.py  auth.py  chat.py  errors.py  health.py  search.py  taxonomy.py
src/hedonism_assistant/api/static/: index.html
src/hedonism_assistant/data/: __init__.py  browser.py  enrich.py  enricher.py  extract.py  fetcher.py  index.py  listing.py  models.py  normalize.py  parser.py  scrape.py  sitemap.py
src/hedonism_assistant/embeddings/: __init__.py  local.py
src/hedonism_assistant/eval/: __init__.py  golden.py  judge.py  report.py  retrieval_metrics.py  run.py
src/hedonism_assistant/generation/: __init__.py  citations.py  fallbacks.py  generator.py  service.py  understanding.py
src/hedonism_assistant/llm/: __init__.py  json_output.py  openrouter.py
src/hedonism_assistant/models/: __init__.py  chat.py  query.py  search.py  wine.py
src/hedonism_assistant/retrieval/: __init__.py  mmr.py  query_parser.py  rerank.py  retriever.py  taxonomy.py
src/hedonism_assistant/vector_store/: __init__.py  client.py  filters.py  payload.py  sparse.py
tests/: test_api_auth.py  test_api_chat.py  test_api_search.py  test_api_taxonomy.py  test_chat_service.py  test_config.py  test_embeddings.py  test_enrich.py  test_enricher.py  test_eval_golden.py  test_eval_judge.py  test_eval_retrieval_metrics.py  test_eval_run.py  test_extract.py  test_filters.py  test_generation_citations.py  test_generation_fallbacks.py  test_generator.py  test_health.py  test_import_images.py  test_index.py  test_json_output.py  test_listing.py  test_mmr.py  test_models.py  test_normalize.py  test_openrouter.py  test_parser.py  test_payload.py  test_query_parser.py  test_rerank.py  test_retriever.py  test_retriever_live.py  test_sitemap.py  test_sparse_encoder.py  test_taxonomy.py  test_understanding.py  test_wine_store.py
tests/fixtures/: __init__.py  product_spirit.html  product_wine.html  wines.py
