[project]
name = "hedonism-wines-assistant"
version = "0.1.0"
description = "Production-grade RAG assistant over the Hedonism wines catalogue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.55",
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.4",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pre-commit>=4.0",
]
# Real browser for the scraper: the catalogue is behind Cloudflare, which 403s
# plain HTTP clients, so every page is fetched through Playwright Chromium.
# Optional so the default install and the serving image stay lean: install with
# `uv pip install -e ".[scrape]"` then `playwright install chromium`.
scrape = [
    "playwright>=1.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hedonism_assistant"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
